--- a/practice-1.ipynb
+++ b/practice-1.ipynb
@@ -68,16 +68,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f9669671",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.2 is the min number.\n"
+     ]
+    }
+   ],
    "source": [
     "###Write code that finds the minimum value of a list of numbers 5, 3, 8, -1, -2.2, 0\n",
     "##Don't use the built-in min() function\n",
-    "##Instantiate a 'numbers' list variable containing the proper values (above)\n",
+    "\n",
     "## Iterate over that list and find the min value\n",
     "###Print the minimum value in the format: \"... is the min number”\n",
+    "\n",
+    "\n",
+    "\n",
+    "numbers = [5, 3, 8, -1, -2.2, 0]\n",
+    "min_value = numbers[0]  # Initialize min_value with the first element\n",
+    "\n",
+    "for num in numbers:\n",
+    "    if num < min_value:\n",
+    "        min_value = num\n",
+    "\n",
+    "print(f\"{min_value} is the min number.\")\n",
     "    "
    ]
   },
