--- a/practice-5.ipynb
+++ b/practice-5.ipynb
@@ -162,31 +162,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "7b83b8d5",
+   "execution_count": 3,
+   "id": "6e11f656",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sleep'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msleep\u001b[39;00m\n\u001b[1;32m      3\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m n \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sleep'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "import sleep\n",
+    "import time  # Import the time module\n",
     "\n",
-    "n = 3\n",
-    "while n > 0:\n",
-    "    print(n)\n",
-    "    sleep(1)    # Execution pauses for 1 second\n",
-    "    n = n - 1   # Decrement n by 1\n",
-    "    "
+    "n = 3  # Initialize n with the value 3\n",
+    "while n > 0:  # Start a while loop that runs as long as n is greater than 0\n",
+    "    print(n)  # Print the current value of n\n",
+    "    time.sleep(1)  # Pause the execution for 1 second\n",
+    "    n = n - 1  # Decrement n by 1\n"
    ]
   },
   {
